Customized swagger including :summary/tag/authorization/response of APIs